--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-name: Your New Jekyll Site
-description: Blogging about stuffs
-meta_description: "Your New Jekyll Site, Blogging about stuffs"
+name: Rajkumar Sharma
+description: iOS Developer & Solution Architect
+meta_description: "iOS Developer with passion to build beautiful apps."
 
 aboutPage: true
 
@@ -9,7 +9,7 @@ highlighter: pygments
 
 paginate: 20
 baseurl: /
-domain_name: 'http://yourblog-domain.com'
+domain_name: 'http://proiosdeveloper.com'
 google_analytics: 'UA-XXXXXXXX-X'
 disqus: false
 disqus_shortname: 'your-disqus-shortname'
